# ros-vms

./: .gitignore
.devcontainer/: devcontainer.json
ros_install/: .rosboxrc  README.md  distrobox.ini  ros_install_doc.md  setup.bash
unitree_rosbox/: README.MD  distrobox.ini  setup.sh  setup_docker.sh
unitree_rosbox/Template_Workspace/: setup.sh  setup_local.sh
unitree_rosbox/Template_Workspace/.devcontainer/: Dockerfile  cache_repos.bash  devcontainer.json
unitree_rosbox/Template_Workspace/.devcontainer/AMD Intel/: devcontainer.json
unitree_rosbox/Template_Workspace/.devcontainer/Fallback/: devcontainer.json
unitree_rosbox/Template_Workspace/.devcontainer/Nvidia/: devcontainer.json
unitree_rosbox/Template_Workspace/.devcontainer/res/: 0001-add-elastic-band-command-line-parameter.patch  0001-add-elastic-band-command-lnie-parameter.patch  setup.sh
unitree_rosbox/Template_Workspace/g1-wave-python/: package.xml  setup.cfg  setup.py
unitree_rosbox/Template_Workspace/g1-wave-python/wave/: wave.py
unitree_rosbox/Template_Workspace/src/g1-sample-pkg/: CMakeLists.txt  package.xml
unitree_rosbox/Template_Workspace/src/g1-sample-pkg/src/: wave.cpp
unitree_rosbox/Template_Workspace/src/g1_wave_example/: CMakeLists.txt  package.xml
unitree_rosbox/Template_Workspace/src/g1_wave_example/src/: wave.cpp
unitree_rosbox/TestWS/.devcontainer/: Dockerfile  devcontainer.json
unitree_rosbox/dockerfiles/: Unitree_ROS2.Dockerfile  docker-compose.yml
unitree_rosbox/dockerfiles/res/: setup.sh
